--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Meeting Minutes</title>
   </head>
   <body>
+     <header>
+    <h1>Team Meeting: check in</h1>
+    <p>Date: April 12, 2025</p>
+  </header>
+  
+    
   </body>
+
+  
 </html>
