--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
     <h1>Team Meeting: check in</h1>
     <p>Date: April 12, 2025</p>
   </header>
-  
-    
+  <main>
+    <section>
+      <h2>Attendance</h2>
+      <ul>
+        <li><strong>Messi</strong></li>
+        <li><em>Ronaldo</em></li>
+        <li>Lebron James</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Agenda</h2>
+      <ol>
+        <li>Unfinished business from last meeting</li>
+        <li>New brainstorming items</li>
+        <li>Q&A session</li>
+      </ol>
+    </section>
+  </main>
+     <footer>
+    <p>© 2025 Go Gitters</p>
+  </footer>
   </body>
 
   
