--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
         <li>Q&A session</li>
       </ol>
     </section>
+    <section>
+  <h2>notes</h2>
+  <p>in our meeting where we <strong>strongly</strong> recommended adopting new practices.</p>
+  <p>We had <b>5</b> absences.</p>
+  <p>Very <em>important</em> idea, <i>Teamwork</i> .</p>
+  <p>Check out  <a href="https://example.com">Project Wiki</a> for details.</p>
+  <hr>
+  <div>
+    <span> span inside a div.</span>
+  </div>
+</section>
+    
   </main>
+    
      <footer>
     <p>© 2025 Go Gitters</p>
   </footer>
