--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Meeting Minutes</title>
+    <link rel="icon" href="path/to/favicon.ico">
   </head>
   <body>
      <header>
