--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </section>
     <details>
   <summary>Click to see old meeting notes</summary>
-  <p>All the notes from the previous meeting go here...</p>
+  <p>notes from the previous meeting go here[...]</p>
 </details>
 
 <form action="#" method="GET">
