--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <img src="images/whiteboard_diagram.jpg" alt="A diagram drawn during the meeting">
   
   <audio controls>
-    <source src="audio/meeting_audio.mp3" type="audio/mpeg">
+    <source src="audio and video/Recording.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
   <video controls width="320" height="240">
-    <source src="video/meeting_video.mp4" type="video/mp4">
+    <source src="audio and video/meeting.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </section>
