--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   <main>
     <section id="attendance">
       <h2>Attendance</h2>
-      <ul>
-        <li><strong>Messi</strong></li>
-        <li><em>Ronaldo</em></li>
-        <li>Lebron James</li>
+      <ul class="attendee-list"> 
+        <li class="attendee"><strong>Messi</strong></li>
+        <li class="attendee"><em>Ronaldo</em></li>
+        <li class="attendee">Lebron James</li>
       </ul>
     </section>
 
     <section>
       <h2>Agenda</h2>
-      <<ol class="agenda-list">   <!-- flex parent -->
+      <ol class="agenda-list">   <!-- flex parent -->
         <li>from last meeting:</li>
         <li>brainstorming items:</li>
         <li>Q&amp;A session</li>
