--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section>
       <h2>Agenda</h2>
       <ol class="agenda-list">   <!-- flex parent -->
-        <li>from last meeting:</li>
-        <li>brainstorming items:</li>
+        <li>recap from last meeting</li>
+        <li>brainstorming items</li>
         <li>Q&amp;A session</li>
       </ol>
     </section>
