--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </section>
     <section>
   <h2>Meeting whitebaord</h2>
-  <img src="audio and video/whitebaord.png" alt="A diagram drawn during the meeting">
+  <img src="audio and video/whitebaord.png" alt="A diagram drawn during the meeting" class="whiteboard">
   
   <audio controls>
     <source src="audio and video/Recording.mp3" type="audio/mpeg">
