--- a/index.html
+++ b/index.html
@@ -6,118 +6,131 @@
     <link rel="icon" href="path/to/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <!-- page‑specific tweaks -->
     <style>
+      /* dotted rule you asked for */
       hr { border-top: 4px dotted steelblue; }
+
+      /* quick form spacing (ditch all the <br><br> tags) */
+      .form-group { margin-block: 0.75rem; }
     </style>
   </head>
 
-  <body style="background-color: hsl(210 50% 96%);">
+  <body style="background-color: hsl(210 50% 96%); font-family: 'Fira Sans', sans-serif;">
     <header id="top">
-      <h1>Team Meeting: Check In</h1>
-      <p>Date: April 21, 2025</p>
+      <h1>Team Meeting: Check In</h1>
+      <p>Date: April&nbsp;21,&nbsp;2025</p>
+      <hr>
     </header>
 
     <main>
-      <!-- Row 1: Attendance + Agenda + Previous Notes -->
-      <div class="row first-row">
-        <section id="attendance">
-          <h2>Attendance</h2>
-          <ul class="attendee-list">
-            <li class="attendee"><strong>Messi</strong></li>
-            <li class="attendee"><em>Ronaldo</em></li>
-            <li class="attendee">Lebron James</li>
-          </ul>
-        </section>
+      <!-- ───────── 1) Agenda + Attendance + Previous‑notes ───────── -->
+      <section id="agenda-attendance">
+        <h2>Agenda</h2>
+        <ol class="agenda-list">
+          <li>Recap from last meeting</li>
+          <li>Brainstorming items</li>
+          <li>Q&amp;A session</li>
+        </ol>
 
-        <section id="agenda">
-          <h2>Agenda</h2>
-          <ol class="agenda-list">
-            <li>Recap from last meeting</li>
-            <li>Brainstorming items</li>
-            <li>Q&amp;A session</li>
-          </ol>
-        </section>
+        <h2>Attendance</h2>
+        <ul class="attendee-list">
+          <li><strong>Messi</strong></li>
+          <li><em>Ronaldo</em></li>
+          <li>Lebron James</li>
+        </ul>
 
-        <section id="previous-notes">
-          <h2>Previous Meeting Notes</h2>
-          <details>
-            <summary>Click to see old meeting notes</summary>
-            <p>Notes from the previous meeting go here […]</p>
-          </details>
-        </section>
-      </div>
+        <h2>Previous Meeting Notes</h2>
+        <details>
+          <summary>Click to view the notes</summary>
+          <p>Notes from the previous meeting go here […]</p>
+        </details>
+      </section>
 
-      <!-- Row 2: Whiteboard + Audio + Video -->
-      <div class="row second-row">
-        <section id="whiteboard">
-          <h2>Meeting Whiteboard</h2>
-          <img
-            src="audio and video/whitebaord.png"
-            alt="Whiteboard diagram"
-            class="whiteboard"
-          >
-        </section>
+      <hr>
 
-        <section id="audio">
-          <h2>Audio Recording</h2>
-          <audio controls>
-            <source src="audio and video/Recording.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-        </section>
+      <!-- ───────── 2) Audio + Video + Whiteboard ───────── -->
+      <section id="media">
+        <h2>Meeting Media</h2>
 
-        <section id="video">
-          <h2>Video Recording</h2>
-          <video controls>
-            <source src="audio and video/meeting.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </section>
-      </div>
+        <h3>Audio Recording</h3>
+        <audio controls>
+          <source src="media/recording.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
 
-      <!-- Row 3: Post‑Meeting Form -->
-      <div class="row form-row">
+        <h3>Video Recording</h3>
+        <video controls width="640">
+          <source src="media/meeting.mp4" type="video/mp4">
+          <track kind="captions" src="media/meeting.vtt" srclang="en" label="English captions">
+          Your browser does not support the video tag.
+        </video>
+
+        <h3>Whiteboard Snapshot</h3>
+        <img src="media/whiteboard.png"
+             alt="Snapshot of the meeting whiteboard"
+             width="640">
+      </section>
+
+      <hr>
+
+      <!-- ───────── 3) Post‑meeting form ───────── -->
+      <section id="post-meeting-form">
+        <h2>Post‑Meeting Feedback</h2>
+
         <form action="#" method="GET">
           <fieldset>
-            <legend>Post Meeting Form</legend>
+            <legend>Tell us what you think</legend>
 
-            <label for="username">Name:</label>
-            <input id="username" type="text" name="username" placeholder="Enter your name"><br><br>
+            <div class="form-group">
+              <label for="username">Name:</label>
+              <input id="username" name="username" type="text" placeholder="Enter your name">
+            </div>
 
-            <label for="meeting-date">Meeting Date:</label>
-            <input id="meeting-date" type="date" name="meeting-date"><br><br>
+            <div class="form-group">
+              <label for="meeting-date">Meeting&nbsp;Date:</label>
+              <input id="meeting-date" name="meeting-date" type="date" value="2025-04-21">
+            </div>
 
-            <label for="favorite-game">Favorite game:</label>
-            <input id="favorite-game" type="text" list="topics">
-            <datalist id="topics">
-              <option value="scribble">
-              <option value="among us">
-              <option value="gartic phone">
-            </datalist><br><br>
+            <div class="form-group">
+              <label for="favorite-game">Favorite game:</label>
+              <input id="favorite-game" name="favorite-game" type="text" list="topics">
+              <datalist id="topics">
+                <option value="Scribble">
+                <option value="Among Us">
+                <option value="Gartic Phone">
+              </datalist>
+            </div>
 
-            <label for="subscribe">Subscribe</label>
-            <input id="subscribe" type="checkbox" name="subscribe"><br><br>
+            <div class="form-group">
+              <label><input id="subscribe" name="subscribe" type="checkbox"> Subscribe to updates</label>
+            </div>
 
-            <p>Roles:</p>
-            <input id="role-dev" type="radio" name="role" value="dev">
-            <label for="role-dev">Dev</label><br>
-            <input id="role-designer" type="radio" name="role" value="designer">
-            <label for="role-designer">Design</label><br><br>
+            <fieldset class="form-group">
+              <legend>Role</legend>
+              <label><input id="role-dev" name="role" type="radio" value="dev"> Dev</label>
+              <label><input id="role-designer" name="role" type="radio" value="designer"> Design</label>
+            </fieldset>
 
-            <label for="comments">Extra comments:</label><br>
-            <textarea id="comments" name="comments" rows="4" cols="50"></textarea><br><br>
+            <div class="form-group">
+              <label for="comments">Extra comments:</label><br>
+              <textarea id="comments" name="comments" rows="4" cols="50"></textarea>
+            </div>
 
-            <label for="improvement">Improvement:</label>
-            <select id="improvement" name="improvement">
-              <option value="1">More coffee</option>
-              <option value="2">Shorter</option>
-              <option value="3">Funnier</option>
-            </select><br><br>
+            <div class="form-group">
+              <label for="improvement">How could we improve?</label>
+              <select id="improvement" name="improvement">
+                <option value="1">More coffee</option>
+                <option value="2">Shorter meetings</option>
+                <option value="3">Funnier content</option>
+              </select>
+            </div>
 
             <button type="submit">Submit</button>
           </fieldset>
         </form>
-      </div>
+      </section>
     </main>
 
     <footer>
