--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    <!-- header is wrapped in a container that we center via CSS -->
     <header id="top">
       <div class="container">
         <h1>Team Meeting: Check In</h1>
@@ -18,7 +17,6 @@
     </header>
 
     <main class="container">
-      <!-- Row 1: Agenda + Attendance + Previous Notes -->
       <div class="row first-row">
         <section id="agenda">
           <h2>Agenda</h2>
@@ -47,32 +45,32 @@
         </section>
       </div>
 
-      <!-- Row 2: only Media -->
+    
       <div class="row second-row">
         <section id="media">
           <h2>Meeting Media</h2>
 
           <h3>Audio Recording</h3>
           <audio controls>
-            <source src="media/recording.mp3" type="audio/mpeg">
+            <source src="media/Recording.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
           <h3>Video Recording</h3>
           <video controls width="640">
             <source src="media/meeting.mp4" type="video/mp4">
-            <track kind="captions" src="media/meeting.vtt" srclang="en" label="English captions">
+            <track kind="captions" src="media/meeting.mp4" srclang="en" label="English captions">
             Your browser does not support the video tag.
           </video>
 
           <h3>Whiteboard Snapshot</h3>
-          <img src="media/whiteboard.png"
+          <img src="media/whitebaord.png"
                alt="Snapshot of the meeting whiteboard"
                width="640">
         </section>
       </div>
 
-      <!-- Row 3: Post‑Meeting Feedback form -->
+     
       <div class="row form-row">
         <section id="post-meeting-form">
           <h2>Post‑Meeting Feedback</h2>
