--- a/index.html
+++ b/index.html
@@ -17,33 +17,34 @@
     </header>
 
     <main class="container">
-      <div class="row first-row">
-        <section id="agenda">
-          <h2>Agenda</h2>
-          <ol class="agenda-list">
-            <li>Recap from last meeting</li>
-            <li>Brainstorming items</li>
-            <li>Q&amp;A session</li>
-          </ol>
-        </section>
+  <!-- Row 1: Agenda, Attendance, Previous Notes -->
+  <div class="row first-row">
+    <section id="agenda">
+      <h2>Agenda</h2>
+      <ol class="agenda-list">
+        <li>Recap from last meeting</li>
+        <li>Brainstorming items</li>
+        <li>Q&amp;A session</li>
+      </ol>
+    </section>
 
-        <section id="attendance">
-          <h2>Attendance</h2>
-          <ul class="attendee-list">
-            <li>Messi</li>
-            <li>Ronaldo</li>
-            <li>Lebron James</li>
-          </ul>
-        </section>
+    <section id="attendance">
+      <h2>Attendance</h2>
+      <ul class="attendee-list">
+        <li>Messi</li>
+        <li>Ronaldo</li>
+        <li>Lebron James</li>
+      </ul>
+    </section>
 
-        <section id="previous-notes">
-          <h2>Previous Meeting Notes</h2>
-          <details>
-            <summary>Click to view the notes</summary>
-            <p>Notes from the previous meeting go here […]</p>
-          </details>
-        </section>
-      </div>
+    <section id="previous-notes">
+      <h2>Previous Meeting Notes</h2>
+      <details>
+        <summary>Click to view the notes</summary>
+        <p>Notes from the previous meeting go here […]</p>
+      </details>
+    </section>
+  </div>
 
     
       <div class="row second-row">
