--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 
           <h3>Audio Recording</h3>
           <audio controls>
-            <source src="media/Recording.mp3" type="audio/mpeg">
+            <source src="audio and video/Recording.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
           <h3>Video Recording</h3>
           <video controls width="640">
-            <source src="media/meeting.mp4" type="video/mp4">
+            <source src="audio and video/meeting.mp4" type="video/mp4">
             <track kind="captions" src="media/meeting.mp4" srclang="en" label="English captions">
             Your browser does not support the video tag.
           </video>
 
           <h3>Whiteboard Snapshot</h3>
-          <img src="media/whitebaord.png"
+          <img src="audio and video/whitebaord.png"
                alt="Snapshot of the meeting whiteboard"
                width="640">
         </section>
